<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="quiz_participation_loading">Loading quiz…</string>
    <string name="quiz_participation_failure">Something went wrong while loading your quiz.</string>
    <string name="quiz_participation_suspended">Your internet connection may be unstable.</string>
    <string name="quiz_participation_retry">Try again</string>

    <string name="quiz_participation_wait_for_start_please_wait">Please wait.</string>
    <string name="quiz_participation_wait_for_start_explanation">This page will refresh automatically, when the quiz starts.</string>
    <string name="quiz_participation_wait_for_start_refresh_button">Refresh</string>
    <string name="quiz_participation_wait_for_start_time_until_start">Time until planned start:</string>
    <string name="quiz_participation_wait_for_start_enter_password">Please enter the passcode:</string>
    <string name="quiz_participation_wait_for_start_join_button">Join now</string>
    <string name="quiz_participation_wait_for_start_start_now">Start your quiz run now</string>
    <string name="quiz_participation_wait_for_start_start_now_button">Start Batch</string>

    <string name="quiz_participation_wait_for_start_no_more_attempts_already_participated">You have already participated.</string>
    <string name="quiz_participation_wait_for_start_no_more_attempts_no_more_attempts">You have used up all of your attempts.</string>

    <string name="quiz_participation_wait_for_start_join_batch_error_message">Could not join quiz batch.</string>
    <string name="quiz_participation_wait_for_start_start_batch_error_message">Could not start quiz batch.</string>
    <string name="quiz_participation_wait_for_start_batch_error_positive_button">@android:string/ok</string>

    <string name="quiz_participation_wait_for_start_join_batch_dialog_message">Joining batch… Please wait.</string>
    <string name="quiz_participation_wait_for_start_join_batch_dialog_negative">@android:string/cancel</string>
    <string name="quiz_participation_wait_for_start_start_batch_dialog_message">Starting batch… Please wait.</string>
    <string name="quiz_participation_wait_for_start_start_batch_dialog_negative">@android:string/cancel</string>

    <!--  Participation header  -->
    <string name="quiz_participation_submit_button">Submit</string>

    <string name="quiz_participation_multiple_choice_short">MC</string>
    <string name="quiz_participation_short_answer_short">SA</string>
    <string name="quiz_participation_drag_and_drop_short">DD</string>
    <string name="quiz_participation_overall_score_points">Overall: %1$sP</string>

    <!-- Participation footer -->
    <string name="quiz_participation_time_left">Deadline: %1$s</string>
    <string name="quiz_participation_time_left_quiz_ended">Quiz has ended!</string>
    <string name="quiz_participation_last_saved">Saved: %1$s</string>
    <string name="quiz_participation_never_saved">Saved: Never</string>
    <string name="quiz_participation_practice_mode">Practice</string>
    <string name="quiz_participation_button_previous_question">Previous</string>
    <string name="quiz_participation_button_next_question">Next</string>

    <string name="quiz_participation_time_left_whole_minutes">In %1$d min</string>
    <string name="quiz_participation_time_left_minutes_and_seconds">In %1$d:%2$02d</string>
    <string name="quiz_participation_time_left_whole_seconds">In %1$02d sec</string>

    <string name="quiz_participation_save_failed">Something went wrong while uploading your changes.</string>
    <string name="quiz_participation_save_failed_try_again_button">Try again</string>

    <!--  Quiz question header  -->
    <string name="quiz_participation_question_header_title">%1$d) %2$s</string>
    <string name="quiz_participation_question_header_hint_button">Hint</string>
    <string name="quiz_participation_question_header_points">%1$sP</string>

    <!--  Multiple choice question  -->
    <string name="quiz_participation_multiple_choice_instruction">Please choose all correct answer options.</string>
    <string name="quiz_participation_single_choice_instruction">Please choose the correct answer option.</string>
    <string name="quiz_participation_multiple_choice_help_button_content_description">Display multiple choice item hint button.</string>

    <!-- Drag and drop question  -->
    <string name="quiz_participation_drag_and_drop_instruction">Drag &amp; Drop: Place the suitable items on the correct areas.</string>
    <string name="quiz_participation_load_dnd_image_loading">Loading drag and drop image…</string>
    <string name="quiz_participation_load_dnd_image_failure">Something went wrong while loading the drag and drop image</string>
    <string name="quiz_participation_load_dnd_image_retry">Retry</string>

    <string name="quiz_participation_connection_status_connected">Connected</string>
    <string name="quiz_participation_connection_status_not_connected">Not connected</string>

    <string name="quiz_participation_submit_dialog_title">Submit?</string>
    <string name="quiz_participation_submit_dialog_message">You still have time left. Are you sure you want to submit your solution and end this quiz?</string>
    <string name="quiz_participation_submit_dialog_message_not_all_answered">You still have time left. **You have not answered all questions yet**. Are you sure you want to submit your solution and end this quiz?</string>
    <string name="quiz_participation_submit_dialog_positive">Submit</string>
    <string name="quiz_participation_submit_dialog_negative">@android:string/cancel</string>

    <string name="quiz_participation_submitting_dialog_message">Uploading submission…</string>

    <string name="quiz_participation_submit_failed_dialog_title">Submit failed</string>
    <string name="quiz_participation_submit_failed_dialog_message">Something went wrong while uploading your submission.</string>
    <string name="quiz_participation_submit_failed_dialog_positive">Try again</string>
    <string name="quiz_participation_submit_failed_dialog_negative">@android:string/cancel</string>

    <string name="quiz_participation_question_hint_dialog_title">Hint</string>
    <string name="quiz_participation_question_hint_dialog_positive">@android:string/ok</string>

    <!--  leave quiz without submitting dialog  -->
    <string name="quiz_participation_leave_without_submit_dialog_title">Leave?</string>
    <string name="quiz_participation_leave_without_submit_dialog_message">**You have not submitted yet.** Do you want to leave anyway?</string>
    <string name="quiz_participation_leave_without_submit_dialog_message_unsaved_changes">**You have unsaved changes which will be lost if you leave now. You have not submitted yet.** Do you want to leave anyway?</string>
    <string name="quiz_participation_leave_without_submit_dialog_positive">Leave</string>
    <string name="quiz_participation_leave_without_submit_dialog_negative">Stay</string>

    <!--  Quiz ended screen   -->
    <string name="quiz_participation_quiz_ended_live_text">You can no longer make changes to this quiz. Either the working period is over or you have already submitted your solution. You can view your results in the exercise overview screen once they are available.</string>
    <string name="quiz_participation_quiz_ended_practice_text">Waiting for result. If nothing happens, click on the submit button below to try again.</string>
    <string name="quiz_participation_quiz_ended_leave_button">Leave now.</string>
    <string name="quiz_participation_quiz_ended_submit_button">Submit</string>

</resources>