...
import de.tum.informatics.www1.artemis.native_app.feature.quiz.participation.ConnectionStatusUi
import de.tum.informatics.www1.artemis.native_app.feature.quiz.participation.getFormattedRelativeToFutureTimeQuizStyle
import kotlin.time.Clock
import kotlin.time.Instant
import kotlin.time.Duration.Companion.minutes

internal const val TEST_TAG_WAIT_FOR_QUIZ_START_SCREEN = "TEST_TAG_WAIT_FOR_QUIZ_START_SCREEN"
internal const val TEST_TAG_TEXT_FIELD_BATCH_PASSWORD = "TEST_TAG_TEXT_FIELD_BATCH_PASSWORD"

/**
 * @param isStartingOrJoiningQuiz if the user is currently requesting to start their quiz run or joining a batch. True while this requests is firing.
 */
@Composable
internal fun WaitForQuizStartScreen(
...
