...
import de.tum.informatics.www1.artemis.native_app.feature.quiz.QuizType
import de.tum.informatics.www1.artemis.native_app.feature.quiz.participation.QuizQuestionData
import de.tum.informatics.www1.artemis.native_app.feature.quiz.screens.QuizQuestionBody
import kotlin.time.Clock
import kotlin.time.Instant

internal const val TEST_TAG_WORK_ON_QUIZ_QUESTIONS_SCREEN = "TEST_TAG_WORK_ON_QUIZ_QUESTIONS_SCREEN"

@Composable
internal fun WorkOnQuizQuestionsScreen(
    modifier: Modifier,
    quizType: QuizType.WorkableQuizType,
    questionsWithData: List<QuizQuestionData<*>>,
...
